--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,54 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.toast_container{
+    position: fixed;
+    top: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999999999px !important;
+}
+
+.toast_modal{
+  width: 358px;
+  height: 90px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  padding: 20px;
+  margin: 12px auto;
+  border: 1px solid #E4E4E4;
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px -1px rgba(0,0,0,0.1);
+  box-shadow: rgba(0,0,0,0.1), rgba(0,0,0,0.1), rgba(0,0,0,0.1);
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.toast_content{
+    flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
+
+.toast_content h1{
+    text-wrap: nowrap;
+    font-weight: 600;
+    color: #030712;
+    line-height: 20px;
+    font-size: 14px;
+}
+
+.toast_content p{
+    line-height: 16px;
+    font-size: 12px;
+    text-wrap: nowrap;
+    color: #374151;
+}
