--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.toast_body{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
 .toast_container{
     position: fixed;
     top: 0%;
